candle-einops-macros/tests/ui/fail/unmatched-ellipsis.stderr
error: proc macro panicked
 --> tests/ui/fail/unmatched-ellipsis.rs:4:13
  |
4 |     let _ = einops!("a -> a ..", ());
  |             ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Ignore should be on both sides of the expression
